# dev

./: .gitignore  README.md  hcf.cpp
InsertionSort/: CMakeLists.txt
LinkedList/: .gitignore  CMakeLists.txt  Config.h.in  README.md
LinkedList/include/: main.h
LinkedList/list/: CMakeLists.txt
LinkedList/list/include/: list.h
LinkedList/list/src/: list.c
LinkedList/src/: list.cxx  main.c
MergeSort/: CMakeLists.txt
Prime/: .gitignore  CMakeLists.txt  is_prime.cpp  is_prime.h  main.cpp
c/: .gitignore  README.md  sudoku.c
c/LinkedList/: .gitignore  CMakeLists.txt  README.md
c/LinkedList/include/: main.h
c/LinkedList/list/include/: list.h
c/LinkedList/list/src/: list.c
c/LinkedList/src/: main.c
cpp/: DynamicConstructor.cpp  FileAppend.cpp  MyDate.cpp  README.md  Source1.cpp  bubble_sort.cpp  calendar.cpp  chef_and_cards.cpp  chfm.cpp  coke.cpp  commandline.cpp  dilemma.cpp  dynamic_string.cpp  file_count.cpp  football.cpp  hello.cpp  inches_feet.cpp  insertion_sort.cpp  is_prime.cpp  linkedlist.cpp  loop_decl.cpp  my_window.cpp  pajapong.cpp  pcj19a.cpp  pcj19e.cpp  puzzle.cpp  selection_sort.cpp  string.cpp  string_status.cpp  strrev_recursion.cpp  time.cpp  zombie_and_the_caves.cpp
mcts/: CMakeLists.txt
mcts/mcts/: Board.cpp  Board.h  CMakeLists.txt  Node.cpp  Node.h  Position.h  State.cpp  State.h  Tree.cpp  Tree.h  main.cpp  mcts.cpp  mcts.h
python/: 4-digit.py  ASCII_art_1.py  Calculator.py  Click and Type.pyw  Cloud.pyw  Example.py  Factorial.py  README.md  Triangle.pyw  arc.pyw  better_hello_tkinter.pyw  binary_search.py  check_fermat.py  factorial_recursion.py  fibeasy.py  fibonacci.py  flowers.pyw  hello_world_tk.pyw  in_square_out.py  largest_of_three.py  leap_year.py  linear_search.py  mine_sweeper.pyw  minesweeper.py  mypolygon.pyw  num_square.py  odd_even.py  puzzle.py  society.py  test.py
turboC/: 11121133.C  12345678.C  5D_RECUR.C  5_SUM.C  ABC.C  ABSLUTE_.C  ADDRESS.C  AREA_CIR.C  ARMSTRON.C  ARR_REV.C  ASCENDIN.C  ASCII.C  BUBBLE_S.C  CALCULAT.C  CALENDAR.C  CAR_MOVE.C  COMBINAT.C  COMBI_4D.C  EVEN_ODD.C  EXPONENT.C  FACTORIA.C  FACT_FUN.C  FIBONICA.C  FIBO_REC.C  FLOAT_SI.C  F_READ.C  GRADES.C  GREATER_.C  HASH_NUM.C  HRT_DIAM.C  IF_EXAMP.C  INSERT_S.C  (+38 more)
(+42 files in other folders)
